Final commit: Implementación de la lógica de población de datos para reservas y cancelaciones
- Implementación del servicio `BookingPopulatorService` para crear y cancelar reservas de manera automática.
- Añadido soporte para crear reservas para clientes mediante citas aleatorias.
- Agregada la funcionalidad para cancelar un conjunto de reservas con razones aleatorias.
- Reutilización de objeto `Random` para una generación más eficiente de índices aleatorios.
- Se actualizó la lista de respuestas de creación de reservas y se añadió un log para las respuestas generadas.
- Mejora en la estructura y legibilidad del código para la gestión de cancelaciones.

Este commit incluye todas las funcionalidades relacionadas con la población de datos para el modelo de reservas.